test/CheckError/Const/ConstPointerTransitivity.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

struct S {
	int* p;
};

void f(const S* value) {
	// CHECK: .loci:11:2: error: template arguments do not satisfy require predicate 'const(int_t) : sized_type_t and const(int_t) : movable_t<notag(int_t)>' of method 'assign'
	// CHECK: .loci:11:2: note: because: mutator method '__move' is required but type is const
	*(value->p) = 1;
}

// CHECK: 1 error generated.
